<resources>
    <string name="app_name">XX</string>
    <string name="cancle">取消</string>
    <string name="confirm">确定</string>
    <string name="back">返回</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_network">当前无网络</string>
    <string name="parse_error">解析异常</string>
    <string name="login_invalid">登录失效，请重新登录！</string>
    <string name="no_data">暂无数据</string>
    <string name="submit">提交</string>
    <string name="exit_again">再按一次退出</string>
    <string name="name">姓名</string>
    <string name="new_pwd">新密码</string>
    <string name="new_pwd_shuru">请输入新密码</string>
    <string name="new_pwd2_shuru">请再次输入新密码</string>
    <string name="old_pwd">旧密码</string>
    <string name="photograph">拍照</string>
    <string name="album">相册</string>
    <string name="success">成功</string>
    <string name="savesuccess">保存成功</string>
    <string name="save">保存</string>
    <string name="Start_downloading">开始下载...请稍候</string>
    <string name="more">更多</string>
    <string name="index">指标</string>
    <string name="hide">隐藏</string>
    <string name="main">主图</string>
    <string name="child">副图</string>
    <string name="delete">删除</string>
    <string name="camera_permission">权限不可用，请开启相机权限</string>
    <string name="storage_permission">权限不可用，请开启存储权限</string>
    <string name="audio_permission">权限不可用，请开启录音权限</string>
    <string name="password_realname">请先设置资金密码和身份认证</string>
    <string name="binding_phone_first">请先绑定手机号</string>
    <string name="realname">请去身份认证</string>
    <string name="Incomplete_information1">请完善信息或重新选择图片</string>
    <string name="shangjia">请去商家认证</string>
    <string name="seller_credit">商家认证</string>
    <string name="apply_to_be_seller">申请成为商家</string>
    <string name="apply_to_be_seller_again">重新申请</string>
    <string name="apply">立即申请</string>
    <string name="apply_tip1">我已阅读并同意</string>
    <string name="apply_tip2">《认证商家协议》</string>
    <string name="bond_type">保证金币种</string>
    <string name="bond_count">保证金数量</string>
    <string name="asset_proof">个人数字资产证明</string>
    <string name="exchange_proof">数字资产交易证明</string>
    <string name="qq_account_hint">请输入QQ账号</string>
    <string name="confirm_upload_all">请确认是否已经上传全部图片</string>
    <string name="refund_deposit_auditing">退保审核中</string>
    <string name="refund_deposit_failed">退保失败，请前往PC端重新申请退保</string>
    <string name="data_error">数据有误</string>
    <string name="library_file_exception">图库文件返回异常</string>
    <string name="Incomplete_information">填写信息不完整</string>
    <string name="xieyi">未勾选同意用户协议</string>
    <string name="empty_address">数据有误，地址为空</string>
    <string name="order_details_failed">订单详情获取失败,正在重新获取</string>
    <string name="No_qrcode">未设置二维码地址</string>
    <string name="No_ads">广告信息获取失败，正在重新获取！</string>
    <string name="input_number_over_limit1">输入数量大于可购买数量</string>
    <string name="input_number_over_limit2">输入数量大于可卖数量</string>
    <string name="set_account_pass">请先设置资金密码</string>
    <string name="not_yet_open">暂未开放</string>
    <string name="nationality">国籍</string>
    <string name="china">中国</string>
    <string name="start_bind">开始绑定</string>
    <string name="egional_selection">地区选择</string>
    <string name="edit">修改</string>
    <string name="change_phone_num">修改手机号</string>
    <string name="changeBindPhoneNum">修改绑定手机号</string>
    <string name="changeBindPhoneNumTip">您正在修改XX账户绑定的手机号，请进行身份认证</string>
    <string name="receivePhoneCode">原手机能接受验证码</string>
    <string name="unReceivePhoneCode">原手机不能接受验证码</string>
    <string name="unReceivePhoneCodeTip">原手机号不能接收验证码，请联系客服进行修改绑定</string>
    <string name="handsetTailNumber">手机尾号</string>
    <string name="receiveMessageCode">接收到的短信验证码</string>
    <string name="changeLoginPassword">更改登录密码</string>
    <string name="changeLoginPasswordTip">您正在修改XX的登录密码</string>
    <string name="changeLoginPasswordTip1">您已经绑定手机号</string>
    <string name="changeLoginPasswordTip2">修改成功请重新登录</string>
    <string name="oldLoginPassword">旧登录密码</string>
    <string name="newLoginPassword">新登录密码</string>
    <string name="certainPassword">确认密码</string>
    <string name="setMoneyPassword">设置资金密码</string>
    <string name="setMoneyPasswordTip">您正在修改XX的资金密码</string>
    <string name="changeMoneyPassword">修改资金密码</string>
    <string name="changeMoneyPasswordTip">您正在重置XX的资金密码</string>
    <string name="oldMoneyPassword">旧资金密码</string>
    <string name="newMoneyPassword">新资金密码</string>
    <string name="certainMoneyPassword">确认资金密码</string>
    <string name="safe_tip">为保障您的账户安全，请完成身份认证后方可交易操作！</string>
    <string name="IdCardNumber">身份证号码</string>
    <string name="IdCardNameInput">请输入您的真实姓名</string>
    <string name="IdCardNumberInput">请输入身份证号码</string>
    <string name="unUpload">未上传</string>
    <string name="failReason">未审核通过原因:</string>
    <string name="IdCardImage">身份证照片</string>
    <string name="faceIDImage">身份证正面照</string>
    <string name="backIDImage">身份证反面照</string>
    <string name="takeIDImage">手持身份证正面照</string>
    <string name="Upload_success">上传成功</string>
    <string name="video_credit_tip">录制一段自己朗读如下数字的视频</string>
    <string name="start_record_video">点击开始录制</string>
    <string name="start_upload">开始上传</string>
    <string name="video_too_short">录制时间过短</string>
    <string name="upload_video_first">请先上传视频</string>
    <string name="home">首页</string>
    <string name="market">行情</string>
    <string name="exchange">币币</string>
    <string name="margin">杠杆</string>
    <string name="fiat">法币</string>
    <string name="transaction">交易</string>
    <string name="fabi">法币</string>
    <string name="fabi2">快捷买币</string>
    <string name="account">我的</string>
    <string name="assets">资产</string>
    <string name="contract">合约</string>
    <string name="contract1">合约交易</string>
    <string name="home_change">涨幅榜</string>
    <string name="four_danjia">单价</string>
    <string name="help_center">帮助中心</string>
    <string name="FAQ">常见问题</string>
    <string name="guide">新手指南</string>
    <string name="message_list">公告中心</string>
    <string name="message_description">公告栏</string>
    <string name="fiat_description">支持BTC,USDT,ETH等</string>
    <string name="help_description">有问题找我</string>
    <string name="to_buy">我要买</string>
    <string name="to_sell">我要卖</string>
    <string name="coin_name">名称</string>
    <string name="current_price">最新价</string>
    <string name="change">涨跌幅</string>
    <string name="plate_default">默认</string>
    <string name="plate_buy">买盘</string>
    <string name="plate_sell">卖盘</string>
    <string name="my_mingxi">交易明细</string>
    <string name="sousuo">搜索</string>
    <string name="star_end">起止时间为手续费生成时间</string>
    <string name="star_end1_1">起止时间为订单生成时间</string>
    <string name="shouxufei_time">手续费生成时间</string>
    <string name="dz_time">到账时间</string>
    <string name="star_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="cb_cbfh_yes">持币分红已返还累计</string>
    <string name="cb_cbfh_no">持币分红待返还累计</string>
    <string name="cb_star_end">起止时间为持币日期</string>
    <string name="cb_star_riqi">持币日期</string>
    <string name="cb_fenhong">持币分红(ETH)</string>
    <string name="jy_chakan">查看详情</string>
    <string name="jiaoyi_time">交易时间</string>
    <string name="jiaoyi_id">订单ID</string>
    <string name="jiaoyi_dui">交易对</string>
    <string name="jiaoyi_fangxiang">方向</string>
    <string name="jiaoyi_jiage">价格</string>
    <string name="jiaoyi_weituoliang">委托量</string>
    <string name="jiaoyi_yichengjiao">已成交</string>
    <string name="jiaoyi_shouxufei">手续费</string>
    <string name="yq_wkjl_yes">邀请挖矿奖励已返还累计</string>
    <string name="yq_wkjl_no">邀请挖矿奖励待返还累计</string>
    <string name="yq_xmshouji">请输入被推荐人姓名或手机号</string>
    <string name="yq_name">被推荐人姓名</string>
    <string name="yq_iphone">被推荐人手机号</string>
    <string name="jiaoyishouxufei">交易手续费返还</string>
    <string name="jiaoyishouxufei_jilv">返还记录</string>
    <string name="jiaoyishouxufei_guize">返还规则</string>
    <string name="jiaoyi_riqi">日期</string>
    <string name="jiaoyi_junjia">当日BHB均价(ETH)</string>
    <string name="jiaoyi_zongzhehe">当日总手续费折合(ETH)</string>
    <string name="jiaoyi_wkzhehe">当日挖矿手续费返还(BHB)</string>
    <string name="jiaoyi_beizeng">当日挖矿收入倍增计划返还(BHB)</string>
    <string name="fenpei">分配方案</string>
    <string name="fenpei_pingtai">平台收入分配方案</string>
    <string name="fenpei_xiao">(BHB持有者权益)</string>
    <string name="fenpei_today_2">今日平台总收入折合</string>
    <string name="fenpei_today_1">今日待分配收入累计折合</string>
    <string name="fenpei_today_3">今日待分配收入详情</string>
    <string name="fenpei_today_4">平台总手续费</string>
    <string name="fenpei_today_5">待分配收入</string>
    <string name="fenpei_today_2_zuo">昨日平台总收入折合</string>
    <string name="fenpei_today_1_zuo">昨日待分配收入累计折合</string>
    <string name="fenpei_today_3_zuo">昨日待分配收入详情</string>
    <string name="fenpei_today_5_zuo">分配收入</string>
    <string name="not_logged_in">未登录</string>
    <string name="welcome_to">欢迎来到XX</string>
    <string name="my_order">订单管理</string>
    <string name="my_ads">我的广告</string>
    <string name="my_message">平台消息</string>
    <string name="my_entrust">我的委托</string>
    <string name="history_trust">历史委托</string>
    <string name="no_data_current_entrust">暂无当前委托数据</string>
    <string name="no_data_history_entrust">暂无历史委托数据</string>
    <string name="my_promotion">我的推广</string>
    <string name="share_image">分享海报</string>
    <string name="share_app">分享应用</string>
    <string name="my_credit">身份认证</string>
    <string name="my_safe">账户安全</string>
    <string name="my_order_manage">订单管理</string>
    <string name="service_fee">手续费</string>
    <string name="service_fee_real">实付手续费</string>
    <string name="my_version">版本更新</string>
    <string name="my_setting">设置</string>
    <string name="balance">总账户资产折合约(USDT)</string>
    <string name="balance_1">资产管理</string>
    <string name="balance_2">我的资产</string>
    <string name="asset_flow">资产流水</string>
    <string name="deposit_record">充币记录</string>
    <string name="withdraw_record">提币记录</string>
    <string name="score_record">积分记录</string>
    <string name="score_current">当前积分：</string>
    <string name="balance_4">币理财</string>
    <string name="tuijian1">推荐好友</string>
    <string name="tuijian2_1">来</string>
    <string name="tuijian2_2">注册交易</string>
    <string name="tuijian3_1">赚取</string>
    <string name="tuijian3_2">佣金</string>
    <string name="my_bb">币币管理</string>
    <string name="my_bb2">点击进入</string>
    <string name="my_fabi">法币管理</string>
    <string name="logout_confirm">您确定要退出登录？</string>
    <string name="logout_current_account">退出</string>
    <string name="login_account">账号</string>
    <string name="message_details">公告</string>
    <string name="promote_friends">推广好友</string>
    <string name="my_commission">我的奖励</string>
    <string name="registration_time">注册时间</string>
    <string name="recommendation_level">推荐级别</string>
    <string name="text_ad_title">发布购买广告</string>
    <string name="text_ad_titles">发布出售广告</string>
    <string name="text_ad_shou">收款方式</string>
    <string name="type">类型</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="goto_regist">立即注册</string>
    <string name="no_zhanghao">还没有XX帐号?</string>
    <string name="login_account_input">请输入手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="user_name">用户名</string>
    <string name="number">数量</string>
    <string name="time">时间</string>
    <string name="transfer_asset">划转</string>
    <string name="text_vip_one_privilege">LV1等级特权</string>
    <string name="text_c2c_service_charge">币币手续费</string>
    <string name="text_otc_service_charge">法币手续费</string>
    <string name="text_lever_service_charge">杠杆交易手续费</string>
    <string name="text_withdrawal_limit_day">每日提现额度(USDT)</string>
    <string name="text_number_coins_day">每日提币笔数</string>
    <string name="password_login">密码登录</string>
    <string name="code_login">验证码登录</string>
</resources>